2002-07-01	Naba Kumar	<kh_naba@users.sourceforge.net>

	* pixmaps/anjuta_splash.png: New splash from Misha.
	
	Patch from: Pierre Sarrazin <sarrazip@sympatico.ca>
	
	* src/breakpoints.h, src/debugger.h, src/project_dbase.h,
	src/text_editor.c, src/text_editor.h, src/text_editor_gui.c,
	src/toolbar.c, src/toolbar.h: C++ fixes so that these could work
	with c++ sources.
	
	* src/aneditor.cxx: Automatic expression tips during debugging
	session.
	
	* NEWS: Updated.
	
2002-06-28  patch from Jens Georg <mail@jensgeorg.de>

	* doc/Makefile.am, configure.in: Updated for new launcher manpage.
	* doc/anjuta_launcher.1.in: Added file.
	
2002-06-28	Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>

	* src/project_dbase.c: Fixed update of tagmanager.
	
2002-06-28	Johannes Schmid <clubfan@users.sourceforge.net>
	
	* src/cvs.c, src/cvs_gui.c: cvs remove -f is now used and
	a warning is printed in the dialog. (Bug #567983)

2002-06-28	Naba Kumar	<kh_naba@users.sourceforge.net>

	(Patch from: ??)
	
	* src/appwiz_page1.c, src/pixmaps.h, src/project_dbase.c,
	src/project_dbase.h, src/project_import_cbs.c, src/project_type.c,
	src/source.c, src/wizard_gui.c: libglade2 wizard.
	
	Patch from Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>
	
	* scintilla/include/PropSet.h:
	see mail 13/06/2002 "Dollar is a valid function character"
	
2002-06-23	Naba Kumar	<kh_naba@users.sourceforge.net>

	* src/preferences_gui.c: Added pixmaps to the preferences tab labels
	
	* src/pixmaps.h, pixmaps/Makefile.am, pixmaps/prefs_*.xpm,
	anjuta.prj: Added xpm pixmap files and their entries.
	
	(Patch from Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>)
	
	* src/utilities.h, tagmanager/tm_project.c: Cleanups
	
	* src/project_dbase.c, src/project_dbase_gui.c: Fixed the
	file-path-corruption bug and the cannot-import-file-in-project
	bug and taken care of both generated and imported projects.
	
2002-06-13	Naba Kumar	<kh_naba@users.sourceforge.net>
